2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* lib/system-gschemrc.in: Apply patch from Peter Brett. Thanks!
	  Rearrange gschem help menu & make it link to wiki pages.

	  Rearrange the gschem help menu:
	   - "Manual" now links directly to the gschem User Guide.
	      (Note by cnieves: I commented this out until the gsch2pcb 
	      tutorial gets into the wiki and the UG wiki page is improved).
	   - "FAQ" now links directly to the gschem FAQ
	   - Add menu item which links directly to the wiki root page
	   - Rearrange "About" and "Hotkeys" to bottom of menu
	  
	* include/prototype.h, src/g_funcs.h, src/g_register.c:
	  Apply patch from Peter Brett, adding the gschem-browse-wiki 
	  Scheme function. Thanks!

	  This function allows Scheme code to open a browser to a wiki page
	  by calling gschemdoc with its -w option.  

	  This will facilitate adding more useful things to gschem's "Help"
	  menu without needing a large number of callbacks to be added to 
	  gschem.

2007-04-21 Peter Clifton <pcjc2@cam.ac.uk>

	* src/x_print.c: Fix color printing of selected object to use the
	  correct, non-selected color for the output. This required replacing
	  code which manually cleared the selection GList with a call to
	  o_selection_unselect_list(), which takes care of the color change.

2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes from noscreen branch

	2007-04-12 Peter Clifton <pcjc2@cam.ac.uk>

		* src/g_hook.h: Fixed up documentation in to reflect the current code.
		  Removed doc reference to world_get_complex_bounds(), which is not used.


	2007-04-06 Peter Clifton <pcjc2@cam.ac.uk>

		* src/o_select.c: Fixed selection box testing which had some <= and =>
		  tests reversed during screen->world coordinate switching. The swap
		  was incorrect, as "top" and "bottom" should actually be named "y_min"
		  and "y_max". The nameing is wrong in the world coordinate system.

	2007-04-02 Peter Clifton <pcjc2@cam.ac.uk>
